* Changed bufferPool class from ArrayList to LinkedList. * Refactored SysEx code.